attempt to stop autofocus when on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@ body {
     background-image: url("../images/background-image.png");
 }
 
+input[type="text"],
+select:focus,
+textarea {
+  font-size: 16px;
+}
+
 body>div {
     background-color: rgba(57, 56, 58, 0.8);
     color: #fafafa;
